4/4.5/back/manifest/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ping-pong-dep
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ping-pong
  strategy:
    canary:
      steps:
        - setWeight: 25
        - analysis:
            templates:
            - templateName: cpu-usage-rate
        - pause: 
            duration: 20
        - setWeight: 75
        - analysis:
            templates:
            - templateName: cpu-usage-rate
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: kostikorhonen/back:latest
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 15
            httpGet:
              path: /healthz
              port: 3001
          resources:
            limits:
              cpu: "100m"
              memory: "150Mi"
